Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-2962

Slave fails with Abort stacktrace when DNS cannot resolve hostname

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.22.1
    • 0.23.0
    • agent
    • Mesosphere Sprint 13
    • 1

    Description

      If the DNS cannot resolve the hostname-to-IP for a slave node, we correctly return an Error object, but we then fail with a segfault.

      This code adds a more user-friendly message and exits normally (with an EXIT_FAILURE code).

      For example, forcing net::getIp() to always return an Error, now causes the slave to exit like this:

      $ ./bin/mesos-slave.sh --master=10.10.1.121:5405
      WARNING: Logging before InitGoogleLogging() is written to STDERR
      E0630 11:31:45.777465 1944417024 process.cpp:899] Could not obtain the IP address for stratos.local; the DNS service may not be able to resolve it: >>> Marco was here!!!
      
      $ echo $?
      1
      

      Attachments

        Issue Links

          Activity

            People

              marco-mesos Marco Massenzio
              marco-mesos Marco Massenzio
              Adam B Adam B
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: